# soccerwithyourfriends

./: Containerfile  pyproject.toml
soccerwithyourfriends/: __main__.py  config.py  database.py  fileload.py  importdata.py  webserver.py
soccerwithyourfriends/dynamic/: configured_style.css.jinja
soccerwithyourfriends/static/: index.html  script.js  script_app.js  script_dataload.js  script_pagerender.js  script_upload.js  style.css  style_desktop.css  style_mobile.css
soccerwithyourfriends/static/templates/: detail_game.html  detail_news.html  detail_player.html  detail_team.html  games.html  list_games.html  list_games_relative.html  list_news.html  list_seasons.html  list_teams.html  mappings.njk  matrix.html  news_row.html  scorers.html  seasonlist.html  table.html  table_alltime.html  table_eternal.html
